# car

./: CMakeLists.txt  README.md  package.xml
config/: control.yaml
launch/: display.launch.py  gazebo.launch.py  spawn_robot_ros2.launch.py
meshes/: Left_wheel_front.STL  base_link.STL  left_hinge_back.STL  left_hinge_front.STL  left_wheel_back.STL  left_wheel_front.STL  lidar_link.STL  right_hinge_back.STL  right_hinge_front.STL  right_wheel_back.STL  right_wheel_front.STL
src/: proportional_control.py  teleop_template.py
urdf/: car.csv  car.urdf.xacro
