<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>car</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="surya-ros@todo.todo">surya-ros</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>xacro</build_depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>tf2</depend>
  <depend>tf_transformations</depend>
  <depend>tf2_ros</depend>
  <depend>ros2_control</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.." />
  </export>

  <!-- <xacro:macro name="body_color">
    <visual>
    <material>
        <ambient>0.8 0.558823529411765 0.1 1</ambient>
        <diffuse>0.8 0.558823529411765 0.1 1</diffuse>
        <specular>0.1 0.1 0.1 1</specular>
        <emissive>0 0 0 0</emissive>
    </material>
    </visual>
  </xacro:macro>

  <gazebo reference="base_link">
    <xacro:body_color />
  </gazebo> -->

</package>
